--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dashboard",
   "version": "1.0.0",
-  "description": "",
   "main": "dashboard.js",
   "type": "module",
   "scripts": {
@@ -9,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
